// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.webassetcache.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/webassetcache/v1;webassetcache";

// Webasset is a webasset
message Webasset {
  string name = 1;
  bytes content = 2;
}

// GetWebassetRequest
message GetWebassetRequest {
  string name = 1;
}

// GetWebassetResponse
message GetWebassetResponse {
  string name = 1;
  bytes content = 2;
}

//
// WebassetCacheService is a service
service WebassetCacheService {
  // GetWebasset
  rpc GetWebasset(GetWebassetRequest) returns (GetWebassetResponse);
}
